Talked over these fixes with Hannah for readability in the modal. Did some other fixes that were in place but stashed for just this day...

--- a/components/anchor_nav/anchor_nav.scss
+++ b/components/anchor_nav/anchor_nav.scss
@@ -23,7 +23,7 @@
 
   body.logged-in & {
     &.top {
-      top: 7.75rem;
+      top: rem-calc(127);
     }
   }
 
